@@ -75,7 +75,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14E   , "__12LF1840"    , { "pic12lf1840"    , "p12lf1840"      , "12lf1840"        }, 0xA840,  2,   32, 0x00F0FF, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "12lf1840_g.lkr"     },
   { PROC_CLASS_PIC14E   , "__12LF1840T39A", { "pic12lf1840t39a", "p12lf1840t39a"  , "12lf1840t39a"    }, 0xC840,  2,   32, 0x00F0FF, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "12lf1840t39a_g.lkr" },
   { PROC_CLASS_PIC14E   , "__12LF1840T48A", { "pic12lf1840t48a", "p12lf1840t48a"  , "12lf1840t48a"    }, 0xB840,  2,   32, 0x00F0FF, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "12lf1840t48a_g.lkr" },
-  { PROC_CLASS_PIC12    , "__16C5X"       , { "pic16c5x"       , "p16c5x"         , "16c5x"           }, 0x658A,  4,    4,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
+  { PROC_CLASS_PIC12    , "__16C5X"       , { "pic16c5x"       , "p16c5x"         , "16c5x"           }, 0x6C50,  4,    4,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
   { PROC_CLASS_PIC12    , "__16C52"       , { "pic16c52"       , "p16c52"         , "16c52"           }, 0x6C52,  1,    1, 0x00017F, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "16c52_g.lkr"        },
   { PROC_CLASS_PIC12    , "__16C54"       , { "pic16c54"       , "p16c54"         , "16c54"           }, 0x6C54,  1,    1, 0x0001FF, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "16c54_g.lkr"        },
   { PROC_CLASS_PIC12    , "__16C54A"      , { "pic16c54a"      , "p16c54a"        , "16c54a"          }, 0x654A,  1,    1, 0x0001FF, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "16c54a_g.lkr"       },
@@ -167,7 +167,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14    , "__16CR83"      , { "pic16cr83"      , "p16cr83"        , "16cr83"          }, 0xDC83,  1,    2, 0x00213F, { 0x000200, 0x0020FF }, { 0x002007, 0x002007 }, "16cr83_g.lkr"       },
   { PROC_CLASS_PIC14    , "__16CR84"      , { "pic16cr84"      , "p16cr84"        , "16cr84"          }, 0xDC84,  1,    2, 0x00213F, { 0x000400, 0x0020FF }, { 0x002007, 0x002007 }, "16cr84_g.lkr"       },
   { PROC_CLASS_PIC14    , "__16CR620A"    , { "pic16cr620a"    , "p16cr620a"      , "16cr620a"        }, 0xD20A,  1,    2, 0x0001FF, {       -1,       -1 }, { 0x002007, 0x002007 }, "16cr620a_g.lkr"     },
-  { PROC_CLASS_PIC14    , "__16CXX"       , { "pic16cxx"       , "p16cxx"         , "16cxx"           }, 0x6C77,  4,    4,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
+  { PROC_CLASS_PIC14    , "__16CXX"       , { "pic16cxx"       , "p16cxx"         , "16cxx"           }, 0x6000,  4,    4,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
   { PROC_CLASS_PIC12    , "__16F54"       , { "pic16f54"       , "p16f54"         , "16f54"           }, 0x6F54,  1,    1, 0x0001FF, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "16f54_g.lkr"        },
   { PROC_CLASS_PIC12    , "__16F57"       , { "pic16f57"       , "p16f57"         , "16f57"           }, 0x6F57,  4,    4, 0x0007FF, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "16f57_g.lkr"        },
   { PROC_CLASS_PIC12    , "__16F59"       , { "pic16f59"       , "p16f59"         , "16f59"           }, 0x6F59,  4,    8, 0x0007FF, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "16f59_g.lkr"        },
@@ -343,7 +343,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14E   , "__16LF1947"    , { "pic16lf1947"    , "p16lf1947"      , "16lf1947"        }, 0xA947,  8,   32, 0x00F0FF, { 0x004000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1947_g.lkr"     },
   { PROC_CLASS_PIC16    , "__17C42"       , { "pic17c42"       , "p17c42"         , "17c42"           }, 0x7C42,  0,    0, 0x0007FF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c42_g.lkr"        },
   { PROC_CLASS_PIC16    , "__17C42A"      , { "pic17c42a"      , "p17c42a"        , "17c42a"          }, 0x742A,  0,    0, 0x0007FF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c42a_g.lkr"       },
-  { PROC_CLASS_PIC16    , "__17C43"       , { "pic17c43"       , "p17c43"         , "17c43"           }, 0xEC43,  0,    0, 0x000FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c43_g.lkr"        },
+  { PROC_CLASS_PIC16    , "__17C43"       , { "pic17c43"       , "p17c43"         , "17c43"           }, 0x7C43,  0,    0, 0x000FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c43_g.lkr"        },
   { PROC_CLASS_PIC16    , "__17C44"       , { "pic17c44"       , "p17c44"         , "17c44"           }, 0x7C44,  0,    0, 0x001FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c44_g.lkr"        },
   { PROC_CLASS_PIC16    , "__17C752"      , { "pic17c752"      , "p17c752"        , "17c752"          }, 0x7752,  0,    0, 0x001FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c752_g.lkr"       },
   { PROC_CLASS_PIC16    , "__17C756"      , { "pic17c756"      , "p17c756"        , "17c756"          }, 0x7756,  0,    0, 0x003FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c756_g.lkr"       },
@@ -352,7 +352,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16    , "__17C766"      , { "pic17c766"      , "p17c766"        , "17c766"          }, 0x7766,  0,    0, 0x003FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17c766_g.lkr"       },
   { PROC_CLASS_PIC16    , "__17CR42"      , { "pic17cr42"      , "p17cr42"        , "17cr42"          }, 0xE42A,  0,    0, 0x0007FF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17cr42_g.lkr"       },
   { PROC_CLASS_PIC16    , "__17CR43"      , { "pic17cr43"      , "p17cr43"        , "17cr43"          }, 0xEC43,  0,    0, 0x000FFF, {       -1,       -1 }, { 0x00FE00, 0x00FE0F }, "17cr43_g.lkr"       },
-  { PROC_CLASS_PIC16    , "__17CXX"       , { "pic17cxx"       , "p17cxx"         , "17cxx"           }, 0x7756,  0,    0,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
+  { PROC_CLASS_PIC16    , "__17CXX"       , { "pic17cxx"       , "p17cxx"         , "17cxx"           }, 0x7000,  0,    0,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
   { PROC_CLASS_PIC16E   , "__18C242"      , { "pic18c242"      , "p18c242"        , "18c242"          }, 0x8242,  0, 0x80, 0x003FFF, {       -1,       -1 }, { 0x300000, 0x300007 }, "18c242_g.lkr"       },
   { PROC_CLASS_PIC16E   , "__18C252"      , { "pic18c252"      , "p18c252"        , "18c252"          }, 0x8252,  0, 0x80, 0x007FFF, {       -1,       -1 }, { 0x300000, 0x300007 }, "18c252_g.lkr"       },
   { PROC_CLASS_PIC16E   , "__18C442"      , { "pic18c442"      , "p18c442"        , "18c442"          }, 0x8442,  0, 0x80, 0x003FFF, {       -1,       -1 }, { 0x300000, 0x300007 }, "18c442_g.lkr"       },
@@ -361,7 +361,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E   , "__18C658"      , { "pic18c658"      , "p18c658"        , "18c658"          }, 0x8658,  0, 0x60, 0x007FFF, {       -1,       -1 }, { 0x300000, 0x300007 }, "18c658_g.lkr"       },
   { PROC_CLASS_PIC16E   , "__18C801"      , { "pic18c801"      , "p18c801"        , "18c801"          }, 0x8801,  0, 0x80, 0x1FFFFF, {       -1,       -1 }, { 0x300000, 0x300007 }, "18c801_g.lkr"       },
   { PROC_CLASS_PIC16E   , "__18C858"      , { "pic18c858"      , "p18c858"        , "18c858"          }, 0x8858,  0, 0x60, 0x007FFF, {       -1,       -1 }, { 0x300000, 0x300007 }, "18c858_g.lkr"       },
-  { PROC_CLASS_PIC16E   , "__18CXX"       , { "pic18cxx"       , "p18cxx"         , "18cxx"           }, 0x8452,  0, 0x80,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
+  { PROC_CLASS_PIC16E   , "__18CXX"       , { "pic18cxx"       , "p18cxx"         , "18cxx"           }, 0x8000,  0, 0x80,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
   { PROC_CLASS_PIC16E   , "__18F13K22"    , { "pic18f13k22"    , "p18f13k22"      , "18f13k22"        }, 0xB132,  0, 0x60, 0xF000FF, { 0x002000, 0xEFFFFF }, { 0x300000, 0x30000D }, "18f13k22_g.lkr"     },
   { PROC_CLASS_PIC16E   , "__18F13K50"    , { "pic18f13k50"    , "p18f13k50"      , "18f13k50"        }, 0xA135,  0, 0x60, 0xF000FF, { 0x002000, 0xEFFFFF }, { 0x300000, 0x30000D }, "18f13k50_g.lkr"     },
   { PROC_CLASS_PIC16E   , "__18F14K22"    , { "pic18f14k22"    , "p18f14k22"      , "18f14k22"        }, 0xB142,  0, 0x60, 0xF000FF, { 0x004000, 0xEFFFFF }, { 0x300000, 0x30000D }, "18f14k22_g.lkr"     },
@@ -653,8 +653,8 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E   , "__18LF65K80"   , { "pic18lf65k80"   , "p18lf65k80"     , "18lf65k80"       }, 0xF580,  0, 0x60, 0xF003FF, { 0x008000, 0xEFFFFF }, { 0x300000, 0x30000D }, "18lf65k80_g.lkr"    },
   { PROC_CLASS_PIC16E   , "__18LF66K80"   , { "pic18lf66k80"   , "p18lf66k80"     , "18lf66k80"       }, 0xF680,  0, 0x60, 0xF003FF, { 0x010000, 0xEFFFFF }, { 0x300000, 0x30000D }, "18lf66k80_g.lkr"    },
   { PROC_CLASS_PIC14    , "__14000"       , { "pic14000"       , "p14000"         , "14000"           }, 0x4000,  2,    2, 0x000FBF, {       -1,       -1 }, { 0x002007, 0x002007 }, "14000_g.lkr"        },
-  { PROC_CLASS_EEPROM8  , "__EEPROM8"     , { "eeprom8"        , "eeprom8"        , "eeprom8"         }, 0x1FFF,  0,    0, 0x0000FF, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
-  { PROC_CLASS_EEPROM16 , "__EEPROM16"    , { "eeprom16"       , "eeprom16"       , "eeprom16"        }, 0x1FFF,  0,    0, 0x00007F, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
+  { PROC_CLASS_EEPROM8  , "__EEPROM8"     , { "eeprom8"        , "eeprom8"        , "eeprom8"         }, 0x0008,  0,    0, 0x0000FF, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
+  { PROC_CLASS_EEPROM16 , "__EEPROM16"    , { "eeprom16"       , "eeprom16"       , "eeprom16"        }, 0x0010,  0,    0, 0x00007F, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
   { PROC_CLASS_GENERIC  , "__GEN"         , { "generic"        , "gen"            , "unknown"         }, 0x0000,  0,    0,       -1, {       -1,       -1 }, {       -1,       -1 }, NULL                 },
   { PROC_CLASS_PIC12    , "__HCS1365"     , { "hcs1365"        , "hcs1365"        , "hcs1365"         }, 0xF365,  2,    4, 0x0003FF, {       -1,       -1 }, { 0x0007FF, 0x0007FF }, "hcs1365_g.lkr"      },
   { PROC_CLASS_PIC12    , "__HCS1370"     , { "hcs1370"        , "hcs1370"        , "hcs1370"         }, 0xF370,  2,    4, 0x0003FF, {       -1,       -1 }, { 0x0007FF, 0x0007FF }, "hcs1370_g.lkr"      },
